--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "framer-motion": "^11.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.1",
+    "react-scroll": "^1.9.0",
     "three": "^0.166.1",
     "vanta": "^0.5.24"
   },
