--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ldrs": "^1.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.13.0",
     "react-router-dom": "^6.24.1",
     "react-scroll": "^1.9.0",
     "three": "^0.166.1",
