--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
+    "axios": "^1.7.2",
     "framer-motion": "^11.3.2",
     "ldrs": "^1.0.2",
     "react": "^18.3.1",
@@ -35,4 +36,5 @@
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.1"
   }
+
 }
