--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
+    "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.2",
     "framer-motion": "^11.3.2",
     "ldrs": "^1.0.2",
@@ -36,5 +37,4 @@
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.1"
   }
-
 }
